--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,4 +1,6 @@
 @import 'tailwind.css';
+@import "mixins.scss";
+@import 'variables.scss';
 
 #app {
     display: flex;
@@ -8,5 +10,5 @@
 
 html, body {
     height: 100%;
-    background-color: white;
+    background-color: $background;
 }
