--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,3 +12,9 @@ html, body {
     height: 100%;
     background-color: $background;
 }
+
+[class*="__container"] {
+    max-width: 1408px;
+    margin: 0 auto;
+    padding: 24px;
+  }
