Fix variables and mixins global import, visual improvements

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,5 @@
 @import 'tailwind.css';
-@import "mixins.scss";
-@import 'variables.scss';
+@import 'animations.scss';
 
 #app {
     display: flex;
