--- a/src/pages/login/ui/styles.scss
+++ b/src/pages/login/ui/styles.scss
@@ -30,7 +30,7 @@
             @include title();
         }
 
-        h2 {
+        p {
             @include body();
             color: $text;
         }
