Scroll top button behavior improved

--- a/src/widgets/header/ui/styles.scss
+++ b/src/widgets/header/ui/styles.scss
@@ -72,6 +72,8 @@
 
         border-left: 1px solid $border;
 
+        width: 50%;
+
         @media screen and (max-width: 380px){ 
             width: 100%;
         }
