--- a/src/widgets/header/ui/styles.scss
+++ b/src/widgets/header/ui/styles.scss
@@ -27,10 +27,10 @@
         }
     }
 
-    &__left {
+    &__right {
         display: flex;
         align-items: center;
-        @include adaptiveValue('gap', 24, 12);
+        gap: 8px;
     }
 
     &__link {
