--- a/src/pages/login/ui/styles.scss
+++ b/src/pages/login/ui/styles.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     gap: 36px;
     width: 100%;
-    background-color: $background;
 
     &__wrapper {
         display: flex;
@@ -26,13 +25,13 @@
         gap: 8px;
 
         h1 {
-            color: $text;
+            color: hsl(var(--foreground));
             @include title();
         }
 
         p {
             @include body();
-            color: $text;
+            color: hsl(var(--foreground));
         }
     }
 
@@ -46,7 +45,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: $text;
+    background-color: hsl(var(--primary));
     width: 100%;
     position: relative;
     overflow: hidden;
@@ -58,19 +57,18 @@
         top: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.05;
-        display: none
+        opacity: 0.5;
     }
 
     @media only screen and (max-width: rem(936)) {
-        background: $background;
+        background: var(--background);
     }
 }
 
 .form {
     display: flex;
     flex-direction: column;
-    background: $background;
+    background-color: hsl(var(--background));
     align-items: center;
     border-radius: 16px;
     padding: 64px 36px;
@@ -90,13 +88,13 @@
     }
 
     &__title {
-        color: $text;
+        color: var(--foreground);
         @include title();
     }
 
     &__description {
         @include body();
-        color: $text;
+        color: var(--foreground);
         text-align: center
     }
 
