--- a/src/pages/login/ui/styles.scss
+++ b/src/pages/login/ui/styles.scss
@@ -60,8 +60,8 @@
         opacity: 0.5;
     }
 
-    @media only screen and (max-width: rem(936)) {
-        background: var(--background);
+    @media only screen and (max-width: 936px) {
+        background: hsl(var(--background));
     }
 }
 
@@ -103,5 +103,9 @@
         flex-direction: column;
         gap: 16px;
         max-width: 200px;
+    }
+
+    @media only screen and (max-width: 936px) {
+        background: none;
     }
 }
