--- a/src/entities/hackathon/ui/card/styles.scss
+++ b/src/entities/hackathon/ui/card/styles.scss
@@ -16,12 +16,6 @@
         gap: 8px;
     }
 
-    &__image {
-        img {
-            width: 100%
-        }
-    }
-
     &__title {
         @include subtitle();
     }
@@ -96,14 +90,12 @@
     justify-content: center;
     overflow: hidden;
     border-radius: 12px;
-    width: 100%;
 
     &__bg {
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        filter: blur(5px);
+        filter: blur(5px) brightness(0.5);
     }
 
     &__main {
