Routing transition, media queries for sheet fixes

--- a/src/widgets/filters/ui/styles.scss
+++ b/src/widgets/filters/ui/styles.scss
@@ -5,6 +5,13 @@
     gap: 24px;
     width: 100%;
     max-width: 276px;
+    height: fit-content;
+
+    @media screen and (min-width: 1200px) {
+        padding: 24px;
+        border: 1px solid hsl(var(--border));
+        border-radius: 12px;
+    }
 
     &__actions {
         display: flex;
