--- a/src/pages/home/ui/styles.scss
+++ b/src/pages/home/ui/styles.scss
@@ -21,10 +21,6 @@
         width: 100%;
     }
 
-    &__filters_desktop {
-      padding-top: 104px;
-    }
-
     @media screen and (max-width: 1199.98px) {
       &__filters_desktop,
       &__sorting_desktop {
@@ -57,13 +53,17 @@
         display: flex;
         flex-direction: column;
         @include adaptiveValue('gap', 24, 12);
-        @include adaptiveValue('padding', 24, 12);
+        border-right: 1px solid var(--border);
     }
 
     @media screen and (min-width: 1200px) {
       &__button {
         display: none;
       }
+    }
+
+    &__button {
+      border: 1px solid hsl(var(--border));
     }
 
     @media screen and (max-width: 479.98px) {
