--- a/src/widgets/header/ui/styles.scss
+++ b/src/widgets/header/ui/styles.scss
@@ -72,6 +72,7 @@
         flex-direction: column;
         @include adaptiveValue('gap', 24, 12);
         border-right: 1px solid var(--border);
+        align-items: flex-end;
     }
 
     @media screen and (max-width: 380px){ 
