--- a/src/entities/hackathon/ui/card/styles.scss
+++ b/src/entities/hackathon/ui/card/styles.scss
@@ -54,7 +54,8 @@
         display: flex;
         flex-direction: row;
         gap: 16px;
-        width: 100%
+        width: 100%;
+        justify-content: space-between;
     }
 
     @media screen and (max-width: 1536px) {
