Link profile page with backend

--- a/src/entities/user/ui/badge/styles.scss
+++ b/src/entities/user/ui/badge/styles.scss
@@ -23,6 +23,9 @@
                 outline-color: hsl(var(--primary));
             }
         }
+        &:active {
+            scale: 0.98;
+        }
       }
     
 }
