--- a/src/widgets/user/detail/ui/styles.scss
+++ b/src/widgets/user/detail/ui/styles.scss
@@ -23,6 +23,7 @@
         grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
         gap: 24px;
         grid-auto-flow: dense;
+        width: 100%;
     }
 
     &__image {
@@ -56,4 +57,55 @@
       align-items: center;
       width: fit-content;
     }
+}
+
+.addable {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  &__item {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 24px;
+    padding-bottom: 12px;
+
+    @media screen and (max-width: 779.98px) {
+      flex-direction: column;
+    }
+  }
+
+  &__digit,
+  &__delete {
+    transition: left 0.2s ease-in-out;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+
+  &__delete {
+    left: 999px;
+  }
+
+  &__digit {
+    left: 0;
+  }
+
+  &__number {
+    position: relative;
+    overflow: hidden;
+    background-color: hsl(var(--muted));
+    &:hover {
+      .addable__delete {
+        left: 0;
+      }
+      .addable__digit {
+        left: -999px;
+      }
+      background-color: hsl(var(--secondary));
+    }
+  }
 }
