--- a/src/app/styles/tailwind.css
+++ b/src/app/styles/tailwind.css
@@ -5,34 +5,32 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
- 
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
- 
+    --foreground: 224 71.4% 4.1%;
+  
     --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
- 
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
- 
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
- 
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
- 
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
- 
+    --card-foreground: 224 71.4% 4.1%;
+  
+    --popover: 0 0% 100%;
+    --popover-foreground: 224 71.4% 4.1%;
+  
+    --primary: 262.12, 83.26%, 57.84%; /* #7C3AED - violet-600 */
+    --primary-foreground: 210, 40%, 96.08%; /* #F1F5F9 - slate-100 */
+  
+    --secondary: 220 14.3% 95.9%;
+    --secondary-foreground: 220.9 39.3% 11%;
+  
+    --muted: 220 14.3% 95.9%;
+    --muted-foreground: 220 8.9% 46.1%;
+  
+    --accent: 293.41 69.48% 48.82%; /* #C026D3 - fuchsia-600 */
+    --accent-foreground: 210, 40%, 96.08%; /* #F1F5F9 - slate-100 */
+  
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
- 
-    --ring: 240 10% 3.9%;
- 
+    --destructive-foreground: 210 20% 98%;
+  
+    --border:220 13% 91%;
+    --input:220 13% 91%;
+    --ring:262.1 83.3% 57.8%;
     --radius: 0.5rem;
   }
  
@@ -61,7 +59,7 @@
     --accent: 293.41 69.48% 48.82%; /* #C026D3 - fuchsia-600 */
     --accent-foreground: 210, 40%, 96.08%; /* #F1F5F9 - slate-100 */
  
-    --destructive: 0 62.8% 30.6%; /* #7F1D1D - red-600 */
+    --destructive: 0 79.8% 54.6%; /* #7F1D1D - red-600 */
     --destructive-foreground: 210, 40%, 96.08%; /* #F1F5F9 - slate-100 */
  
     --ring: 240 4.9% 83.9%; /* #D4D4D8 - zinc-300 */
