--- a/src/entities/hackathon/ui/card/styles.scss
+++ b/src/entities/hackathon/ui/card/styles.scss
@@ -7,6 +7,7 @@
     gap: 16px;
     border-radius: 12px;
     background-color: hsl(var(--card));
+    border: 1px solid hsl(var(--border));
 
     &__additionals,
     &__tags {
