Scroll top button fix

--- a/src/shared/ui/scroll-top-button/styles.scss
+++ b/src/shared/ui/scroll-top-button/styles.scss
@@ -3,8 +3,13 @@
     bottom: 0;
     @include adaptiveValue('padding-right', 24, 16);
     @include adaptiveValue('padding-bottom', 24, 16);
-    cursor: pointer;
-    border-radius: 99px;
+    &__button {
+        border-radius: 999px;
+        width: fit-content;
+        padding: 12px;
+        background-color: hsl(var(--primary));
+        cursor: pointer;
+    }
     width: 100%;
     display: flex;
     justify-content: end;
