--- a/src/entities/hackathon/ui/card/styles.scss
+++ b/src/entities/hackathon/ui/card/styles.scss
@@ -1,6 +1,6 @@
 .hackathon-card {
     width: 100%;
-    max-width: 1212px;
+    // max-width: 1212px;
     @include adaptiveValue('padding', 24, 12);
     display: flex;
     flex-direction: row;
@@ -8,7 +8,7 @@
     border-radius: 12px;
     background-color: hsl(var(--card));
     border: 1px solid hsl(var(--border));
-
+    
     &__additionals,
     &__tags {
         display: flex;
