Minor visual improvements

--- a/src/widgets/header/ui/styles.scss
+++ b/src/widgets/header/ui/styles.scss
@@ -72,6 +72,9 @@
 }
 
 .sheet {
+    display: flex;
+    flex-direction: row;
+
     &__header {
         @include title();
         align-items: flex-end;
