--- a/src/app/styles/animations.scss
+++ b/src/app/styles/animations.scss
@@ -32,3 +32,15 @@
   opacity: 0;
   transform: translateX(30px);
 }
+
+@keyframes gradientBorderStem {
+	0% {
+		background-position: 0 0;
+	}
+	50% {
+		background-position: 400% 0;
+	}
+	100% {
+		background-position: 0 0;
+	}
+}
