--- a/src/entities/hackathon/ui/card/styles.scss
+++ b/src/entities/hackathon/ui/card/styles.scss
@@ -19,6 +19,9 @@
 
     &__title {
         @include subtitle();
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     &__description {
@@ -76,38 +79,6 @@
             overflow-y: hidden;
             overflow-x: scroll;
             padding-bottom: 4px;
-        }
-    }
-}
-
-.image {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    border-radius: 12px;
-
-    &__bg {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        filter: blur(5px) brightness(0.5);
-    }
-
-    &__main {
-        z-index: 1;
-    }
-
-    @media screen and (max-width: 768px) {
-        &__bg {
-            display: none;
-        }
-
-        &__main {
-            width: 100%;
-            height: 100%;
         }
     }
 }
