--- a/src/entities/hackathon/ui/poster/styles.scss
+++ b/src/entities/hackathon/ui/poster/styles.scss
@@ -1,25 +1,30 @@
 .image {
+    cursor: pointer;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
     border-radius: 12px;
-    border: 1px solid hsl(var(--border));
     width: 100%;
     height: 100%;
-    cursor: pointer;
 
-    img {
-        object-fit: cover;
-        width: 100%;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        border-radius: 12px;
+        border: 1px solid hsl(var(--border));
+        img {
+            object-fit: cover;
+            width: 100%;
+            border-radius: 12px;
+        }
     }
 
     &__bg {
         position: absolute;
         width: 100%;
         height: 100%;
+        filter: brightness(0.5);
     }
 
     &__wrapper {
@@ -27,21 +32,33 @@
     }
 
     &__main {
+        transition: scale 0.2s ease;
         z-index: 1;
     }
 
     &__button {
-        visibility: hidden;
+        opacity: 0;
         position: absolute;
         right: 0;
         bottom: 0;
         border-radius: 8px 0 8px 0;
         z-index: 2;
+
+        transition: opacity 0.2s ease;
     }
 
-    &:hover {
+    &:hover.clickable {
+        .image__main {
+            scale: 1.005;
+        }
         .image__button {
-            visibility: visible;
+            opacity: 1;
+        }
+    }
+
+    &:active.clickable {
+        .image__main {
+            scale: 0.995;
         }
     }
 
