--- a/src/entities/user/ui/badge/styles.scss
+++ b/src/entities/user/ui/badge/styles.scss
@@ -4,9 +4,13 @@
     gap: 12px;
     align-items: center;
     width: fit-content;
+    cursor: pointer;
 
     &__name {
         @include body();
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     &__avatar {
