--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -21,4 +21,5 @@ html, body {
     @media screen and (max-width: 1536px) {
         max-width: 1328px;
     }
+    @include adaptiveValue('padding-top', 64, 24);
   }
