--- a/src/entities/user/ui/badge/styles.scss
+++ b/src/entities/user/ui/badge/styles.scss
@@ -13,6 +13,12 @@
         }
     }
 
+    &_team {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
     &__avatar {
         border-radius: 999px;
         transition: outline 0.2s ease-in-out;
