--- a/src/widgets/footer/ui/styles.scss
+++ b/src/widgets/footer/ui/styles.scss
@@ -6,7 +6,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-
+        @include adaptiveValue('padding', 24, 16);
          @media screen and (max-width: 379px) {
             flex-direction: column !important;
             gap: 12px;
