--- a/src/entities/user/ui/badge/styles.scss
+++ b/src/entities/user/ui/badge/styles.scss
@@ -13,6 +13,13 @@
         }
     }
 
+    &__text {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+        
+    }
+
     &_team {
         flex-direction: column;
         align-items: center;
