--- a/src/pages/home/ui/styles.scss
+++ b/src/pages/home/ui/styles.scss
@@ -64,6 +64,7 @@
 
     &__button {
       border: 1px solid hsl(var(--border));
+      width: 100%;
     }
 
     @media screen and (max-width: 479.98px) {
