--- a/src/entities/teammate/ui/card/styles.scss
+++ b/src/entities/teammate/ui/card/styles.scss
@@ -7,6 +7,7 @@
     @include adaptiveValue('gap', 48, 16);
     border: 1px solid hsl(var(--border));
     justify-content: space-between;
+    width: 100%;
 
     &__main {
         width: 100%;
@@ -39,12 +40,16 @@
         @include body();
         color: hsl(var(--muted-foreground));
     }
-
-    &__roles,
     &__skills {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        gap: 8px;
+    }
+
+    &__roles {
+        display: flex;
+        flex-direction: column;
         gap: 8px;
     }
 
