--- a/src/entities/teammate/ui/card/styles.scss
+++ b/src/entities/teammate/ui/card/styles.scss
@@ -49,7 +49,8 @@
 
     &__roles {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 8px;
     }
 
@@ -58,6 +59,7 @@
         color: hsl(var(--foreground));
         border-left: 1px solid hsl(var(--accent));
         border-radius: 0;
+        width: fit-content;
     }
     
     @media screen and (max-width: 1360px) {
