User's teams, requests in team's detail, captain only can edit avatar

--- a/src/widgets/team/detail/ui/styles.scss
+++ b/src/widgets/team/detail/ui/styles.scss
@@ -131,3 +131,13 @@
     overflow-x: auto;
   }
 }
+
+.requests {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+
+  @media screen and (max-width: 991.98px) {
+      grid-template-columns: 1fr;
+  }
+}
