--- a/src/entities/team/ui/card/styles.scss
+++ b/src/entities/team/ui/card/styles.scss
@@ -7,6 +7,7 @@
     border-radius: 12px;
     border: 1px solid hsl(var(--border));
     justify-content: space-between;
+    position: relative;
 
     &__info {
         display: flex;
@@ -79,5 +80,11 @@
         &__actions {
             flex-direction: column;
         }
+    }
+
+    &__visability {
+        position: absolute;
+        top: 24px;
+        right: 24px;
     }
 }
