Visual card fixes, new field in team admin

--- a/src/entities/user/ui/badge/styles.scss
+++ b/src/entities/user/ui/badge/styles.scss
@@ -25,6 +25,7 @@
         align-items: center;
         width: 100%;
         min-height: 42px;
+        text-align: center;
     }
 
     &__avatar {
