--- a/src/entities/hackathon/ui/card/styles.scss
+++ b/src/entities/hackathon/ui/card/styles.scss
@@ -1,6 +1,5 @@
 .hackathon-card {
     width: 100%;
-    // max-width: 1212px;
     @include adaptiveValue('padding', 24, 12);
     display: flex;
     flex-direction: row;
@@ -8,33 +7,20 @@
     border-radius: 12px;
     background-color: hsl(var(--card));
     border: 1px solid hsl(var(--border));
-    
-    &__additionals,
+
     &__tags {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 8px;
+        @include tags();
     }
 
     &__title {
         @include subtitle();
-        &:hover {
-            text-decoration: underline;
-        }
     }
 
     &__description {
-        display: -webkit-box; 
-        -webkit-box-orient: vertical; 
-        -webkit-line-clamp: 3; 
-        overflow: hidden; 
-        text-overflow: ellipsis; 
-        @include body();
-        color: hsl(var(--muted-foreground));
+        @include description();
     }
 
-    &__text {
+    &__header {
         display: flex;
         flex-direction: column;
         gap: 4px;
@@ -47,11 +33,7 @@
     }
 
     &__actions {
-        display: flex;
-        flex-direction: row;
-        @include adaptiveValue('gap', 12, 6);
-        align-items: center;
-        justify-content: center;
+        @include actions();
     }
 
     &__main {
