--- a/src/entities/team/ui/card/styles.scss
+++ b/src/entities/team/ui/card/styles.scss
@@ -1,13 +1,5 @@
 .team-card {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    @include adaptiveValue('padding', 24, 12);
-    background-color: hsl(var(--card));
-    border-radius: 12px;
-    border: 1px solid hsl(var(--border));
-    justify-content: space-between;
-    position: relative;
+    @include entityCard();
 
     &__info {
         display: flex;
@@ -15,13 +7,16 @@
         gap: 6px;
     }
 
-    &__roles,
-    &__tags {
+    &__header {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 8px;
-        white-space: nowrap;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        gap: 12px
+    }
+
+    &__tags {
+        @include tags();
     }
     
     overflow-x: hidden;
@@ -30,13 +25,6 @@
         img {
             width: 100%;
         }
-    }
-
-    &__role {
-        background: none;
-        border-left: 1px solid hsl(var(--accent));
-        border-radius: 0;
-        color: hsl(var(--foreground));
     }
 
     &__main {
@@ -50,13 +38,7 @@
     }
 
     &__description {
-        display: -webkit-box; 
-        -webkit-box-orient: vertical; 
-        -webkit-line-clamp: 3; 
-        overflow: hidden; 
-        text-overflow: ellipsis; 
-        @include body();
-        color: hsl(var(--muted-foreground));
+        @include description();
     }
 
     &__actions {
