--- a/src/widgets/user/teams/ui/styles.scss
+++ b/src/widgets/user/teams/ui/styles.scss
@@ -1,12 +1,13 @@
 .teams-list {
-
-    @media screen and (max-width: 991.98px) {
-        grid-template-columns: 1fr;
-    }
-
     &__list {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         gap: 16px;
+    }
+
+    @media screen and (max-width: 991.98px) {
+        &__list {
+            grid-template-columns: 1fr;
+        }
     }
 }
