--- a/src/entities/hackathon/ui/poster/styles.scss
+++ b/src/entities/hackathon/ui/poster/styles.scss
@@ -13,16 +13,14 @@
         overflow: hidden;
         border-radius: 12px;
         border: 1px solid hsl(var(--border));
+        position: relative;
+        width: 100%;
+        padding-top: 56.25%;
+        height: 100%;
         img {
             border-radius: 12px;
             width: 100%;
         }
-    }
-
-    &__wrapper {
-        position: relative;
-        width: 100%;
-        padding-top: 56.25%;
     }
 
     &__main, &__fallback, &__bg {
